--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/usersdb
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
+//running after the first time (when the tables are created in the database) \
+  //or later when you want the data remain for later tests you have to change the key word 'create-drop' to 'update' \
+  //so that the data remains in place. Oops! the database itself without the tables needs to be created manually first.
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.properties.hibernate.show_sql=true
