--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - branch-testBranch
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
