--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/usersdb?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/usersdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://35.176.154.96:3306/sakila?useSSL=false&serverTimezone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.username=eb110
-spring.datasource.password=Wladek123
+#spring.datasource.username=eb110
+spring.datasource.username=sillyGoose
+#spring.datasource.password=Wladek123
+spring.datasource.password=B2fIfWxvIKpID0GjRcJP
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
