film actors http requests cucumber test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/usersdb?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://35.176.154.96:3306/sakila?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://vladawsmysql.cnoou9b3hq1r.us-east-1.rds.amazonaws.com/usersdb?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://35.176.154.96:3306/sakila?useSSL=false&serverTimezone=UTC
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.datasource.username=eb110
-spring.datasource.username=sillyGoose
+spring.datasource.username=vladAdmin
+#spring.datasource.username=sillyGoose
 #spring.datasource.password=Wladek123
-spring.datasource.password=B2fIfWxvIKpID0GjRcJP
+spring.datasource.password=hdjr33Edf2SSd
+#spring.datasource.password=B2fIfWxvIKpID0GjRcJP
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
