--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 
-spring.datasource.url=${aws_db_url}
+#spring.datasource.url=${aws_db_url}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=${aws_db_user}
+#spring.datasource.password=${aws_db_password}
+
+spring.datasource.url=jdbc:mysql://awsdb.cnoou9b3hq1r.us-east-1.rds.amazonaws.com/usersdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${aws_db_user}
-spring.datasource.password=${aws_db_password}
+spring.datasource.username=vladAdmin
+spring.datasource.password=mkdjk33rref32EEdf
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/usersdb
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
