--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.jpa.show-sql=true
 #spring.datasource.username=${aws_db_user}
 #spring.datasource.password=${aws_db_password}
 
-spring.datasource.url=jdbc:mysql://awsdb.cnoou9b3hq1r.us-east-1.rds.amazonaws.com/usersdb
+#spring.datasource.url=jdbc:mysql://awsdb.cnoou9b3hq1r.us-east-1.rds.amazonaws.com/usersdb
+spring.datasource.url=${secrets.AWS_DB_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=vladAdmin
 spring.datasource.password=mkdjk33rref32EEdf
