--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,5 +4,5 @@ cloud:
       static: us-east-1
       auto: false
     credentials:
-      access-key: ${aws_access_key}
-      secret-key: ${aws_secret_key}
+      access-key: AKIA324DP7OSXARWIFXX
+      secret-key: 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
