--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,10 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.7.0</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -144,9 +145,20 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-
+				<version>2.12.4</version>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+						<include>**/CucumberRunner*.java</include>
+					</includes>
+					<excludes>
+						<!--                  <exclude>**/Selenium/*</exclude>-->
+					</excludes>
+					<!--               <testFailureIgnore>true</testFailureIgnore>-->
+				</configuration>
 			</plugin>
+
+
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
